--- a/notebooks/EXP_1.ipynb
+++ b/notebooks/EXP_1.ipynb
@@ -1,12 +1,13 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5kRC74yhtocd"
       },
       "source": [
-        "# Trying basic LSTM model"
+        "# Trying basic LSTM model and logistic model"
       ]
     },
     {
